[gd_scene load_steps=4 format=3 uid="uid://8gv2jv1aiwkp"]

[ext_resource type="Texture2D" uid="uid://jnkec0iwk3h8" path="res://assets/omok_board.png" id="1_fkc5w"]
[ext_resource type="Script" path="res://board/board_piece.gd" id="1_m8kgn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3mg2"]
size = Vector2(37.875, 38)

[node name="BoardPiece" type="Area2D"]
script = ExtResource("1_m8kgn")
pieceType = 3

[node name="Piece2" type="NinePatchRect" parent="."]
visible = false
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("1_fkc5w")
region_rect = Rect2(102, 0, 37, 37)

[node name="Piece" type="Sprite2D" parent="."]
texture = ExtResource("1_fkc5w")
centered = false
hframes = 10
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19, 19)
shape = SubResource("RectangleShape2D_k3mg2")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
